[FAB-7812] Updated the APIs to follow swagger
APIs updated to follow swagger doc
